internal/gatewayapi/testdata/backendtrafficpolicy-dns-lookup-family.out.yaml
backendTrafficPolicies:
- apiVersion: gateway.envoyproxy.io/v1alpha1
  kind: BackendTrafficPolicy
  metadata:
    creationTimestamp: null
    name: backend-traffic-policy
    namespace: default
  spec:
    dns:
      dnsRefreshRate: 5s
      lookupFamily: IPv6
      respectDnsTtl: false
    targetRef:
      group: gateway.networking.k8s.io
      kind: GRPCRoute
      name: grpcroute-1
  status:
    ancestors:
    - ancestorRef:
        group: gateway.networking.k8s.io
        kind: Gateway
        name: gateway-1
        namespace: envoy-gateway
        sectionName: http
      conditions:
      - lastTransitionTime: null
        message: Policy has been accepted.
        reason: Accepted
        status: "True"
        type: Accepted
      controllerName: gateway.envoyproxy.io/gatewayclass-controller
backends:
- apiVersion: gateway.envoyproxy.io/v1alpha1
  kind: Backend
  metadata:
    creationTimestamp: null
    name: backend-fqdn2
    namespace: default
  spec:
    endpoints:
    - fqdn:
        hostname: backend-v2.gateway-conformance-infra.svc.cluster.local
        port: 9090
  status:
    conditions:
    - lastTransitionTime: null
      message: The Backend was accepted
      reason: Accepted
      status: "True"
      type: Accepted
- apiVersion: gateway.envoyproxy.io/v1alpha1
  kind: Backend
  metadata:
    creationTimestamp: null
    name: backend-fqdn
    namespace: default
  spec:
    endpoints:
    - fqdn:
        hostname: grpc-infra-backend.gateway-conformance-infra.svc.cluster.local
        port: 8080
  status:
    conditions:
    - lastTransitionTime: null
      message: The Backend was accepted
      reason: Accepted
      status: "True"
      type: Accepted
- apiVersion: gateway.envoyproxy.io/v1alpha1
  kind: Backend
  metadata:
    creationTimestamp: null
    name: backend-fqdn3
    namespace: default
  spec:
    endpoints:
    - fqdn:
        hostname: backend-v3.gateway-conformance-infra.svc.cluster.local
        port: 8080
  status:
    conditions:
    - lastTransitionTime: null
      message: The Backend was accepted
      reason: Accepted
      status: "True"
      type: Accepted
- apiVersion: gateway.envoyproxy.io/v1alpha1
  kind: Backend
  metadata:
    creationTimestamp: null
    name: backend-fqdn
    namespace: default
  spec:
    endpoints:
    - fqdn:
        hostname: grpc-infra-backend-v1.gateway-conformance-infra.svc.cluster.local
        port: 8080
  status:
    conditions:
    - lastTransitionTime: null
      message: The Backend was accepted
      reason: Accepted
      status: "True"
      type: Accepted
envoyExtensionPolicies:
- apiVersion: gateway.envoyproxy.io/v1alpha1
  kind: EnvoyExtensionPolicy
  metadata:
    creationTimestamp: null
    name: policy-for-httproute
    namespace: default
  spec:
    extProc:
    - backendRefs:
      - kind: Backend
        name: backend-fqdn2
        port: 9090
      backendSettings:
        dns:
          dnsRefreshRate: 5s
          lookupFamily: IPv4AndIPv6
    targetRef:
      group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: httproute-1
  status:
    ancestors:
    - ancestorRef:
        group: gateway.networking.k8s.io
        kind: Gateway
        name: gateway-1
        namespace: envoy-gateway
        sectionName: http
      conditions:
      - lastTransitionTime: null
        message: Policy has been accepted.
        reason: Accepted
        status: "True"
        type: Accepted
      controllerName: gateway.envoyproxy.io/gatewayclass-controller
gateways:
- apiVersion: gateway.networking.k8s.io/v1
  kind: Gateway
  metadata:
    creationTimestamp: null
    name: gateway-1
    namespace: envoy-gateway
  spec:
    gatewayClassName: envoy-gateway-class
    listeners:
    - allowedRoutes:
        namespaces:
          from: All
      name: http
      port: 80
      protocol: HTTP
  status:
    listeners:
    - attachedRoutes: 2
      conditions:
      - lastTransitionTime: null
        message: Sending translated listener configuration to the data plane
        reason: Programmed
        status: "True"
        type: Programmed
      - lastTransitionTime: null
        message: Listener has been successfully translated
        reason: Accepted
        status: "True"
        type: Accepted
      - lastTransitionTime: null
        message: Listener references have been resolved
        reason: ResolvedRefs
        status: "True"
        type: ResolvedRefs
      name: http
      supportedKinds:
      - group: gateway.networking.k8s.io
        kind: HTTPRoute
      - group: gateway.networking.k8s.io
        kind: GRPCRoute
grpcRoutes:
- apiVersion: gateway.networking.k8s.io/v1alpha2
  kind: GRPCRoute
  metadata:
    creationTimestamp: null
    name: grpcroute-1
    namespace: default
  spec:
    parentRefs:
    - name: gateway-1
      namespace: envoy-gateway
      sectionName: http
    rules:
    - backendRefs:
      - kind: Backend
        name: backend-fqdn
        port: 8080
  status:
    parents:
    - conditions:
      - lastTransitionTime: null
        message: Route is accepted
        reason: Accepted
        status: "True"
        type: Accepted
      - lastTransitionTime: null
        message: Resolved all the Object references for the Route
        reason: ResolvedRefs
        status: "True"
        type: ResolvedRefs
      controllerName: gateway.envoyproxy.io/gatewayclass-controller
      parentRef:
        name: gateway-1
        namespace: envoy-gateway
        sectionName: http
httpRoutes:
- apiVersion: gateway.networking.k8s.io/v1
  kind: HTTPRoute
  metadata:
    creationTimestamp: null
    name: httproute-1
    namespace: default
  spec:
    hostnames:
    - gateway.envoyproxy.io
    parentRefs:
    - name: gateway-1
      namespace: envoy-gateway
      sectionName: http
    rules:
    - backendRefs:
      - kind: Backend
        name: backend-fqdn
        port: 8080
      matches:
      - path:
          value: /
  status:
    parents:
    - conditions:
      - lastTransitionTime: null
        message: Route is accepted
        reason: Accepted
        status: "True"
        type: Accepted
      - lastTransitionTime: null
        message: Resolved all the Object references for the Route
        reason: ResolvedRefs
        status: "True"
        type: ResolvedRefs
      controllerName: gateway.envoyproxy.io/gatewayclass-controller
      parentRef:
        name: gateway-1
        namespace: envoy-gateway
        sectionName: http
infraIR:
  envoy-gateway/gateway-1:
    proxy:
      config:
        apiVersion: gateway.envoyproxy.io/v1alpha1
        kind: EnvoyProxy
        metadata:
          creationTimestamp: null
          name: config-for-gateway-class
          namespace: envoy-gateway
        spec:
          logging: {}
          telemetry:
            accessLog:
              settings:
              - format:
                  text: |
                    [%START_TIME%] "%REQ(:METHOD)% %PROTOCOL%" %RESPONSE_CODE% %RESPONSE_FLAGS% %BYTES_RECEIVED% %BYTES_SENT% %DURATION% %RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)% "%REQ(X-FORWARDED-FOR)%" "%REQ(USER-AGENT)%" "%REQ(X-REQUEST-ID)%" "%REQ(:AUTHORITY)%" "%UPSTREAM_HOST%"\n
                  type: Text
                sinks:
                - file:
                    path: /dev/stdout
                  type: File
                - openTelemetry:
                    backendRefs:
                    - kind: Service
                      name: logs
                      namespace: default
                      port: 8080
                    backendSettings:
                      dns:
                        dnsRefreshRate: 30s
                        lookupFamily: IPv4AndIPv6
                    resources:
                      k8s.cluster.name: cluster-1
                  type: OpenTelemetry
        status: {}
      listeners:
      - address: null
        name: ""
      - address: null
        name: envoy-gateway/gateway-1/http
        ports:
        - containerPort: 10080
          name: http-80
          protocol: HTTP
          servicePort: 80
      metadata:
        labels:
          gateway.envoyproxy.io/owning-gateway-name: gateway-1
          gateway.envoyproxy.io/owning-gateway-namespace: envoy-gateway
      name: envoy-gateway/gateway-1
securityPolicies:
- apiVersion: gateway.envoyproxy.io/v1alpha1
  kind: SecurityPolicy
  metadata:
    creationTimestamp: null
    name: policy-for-gateway-1
    namespace: envoy-gateway
  spec:
    extAuth:
      bodyToExtAuth:
        maxRequestBytes: 8192
      failOpen: false
      http:
        backendRefs:
        - kind: Backend
          name: backend-fqdn3
          namespace: default
          port: 8080
        backendSettings:
          dns:
            dnsRefreshRate: 30s
            lookupFamily: IPv4Preferred
    targetRef:
      group: gateway.networking.k8s.io
      kind: Gateway
      name: gateway-1
  status:
    ancestors:
    - ancestorRef:
        group: gateway.networking.k8s.io
        kind: Gateway
        name: gateway-1
        namespace: envoy-gateway
      conditions:
      - lastTransitionTime: null
        message: Policy has been accepted.
        reason: Accepted
        status: "True"
        type: Accepted
      controllerName: gateway.envoyproxy.io/gatewayclass-controller
xdsIR:
  envoy-gateway/gateway-1:
    accessLog:
      openTelemetry:
      - destination:
          name: accesslog_otel_0_1
          settings:
          - name: accesslog_otel_0_1/backend/-1
            protocol: TCP
        resources:
          k8s.cluster.name: cluster-1
        text: |
          [%START_TIME%] "%REQ(:METHOD)% %PROTOCOL%" %RESPONSE_CODE% %RESPONSE_FLAGS% %BYTES_RECEIVED% %BYTES_SENT% %DURATION% %RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)% "%REQ(X-FORWARDED-FOR)%" "%REQ(USER-AGENT)%" "%REQ(X-REQUEST-ID)%" "%REQ(:AUTHORITY)%" "%UPSTREAM_HOST%"\n
        traffic:
          dns:
            dnsRefreshRate: 30s
            lookupFamily: IPv4AndIPv6
      text:
      - format: |
          [%START_TIME%] "%REQ(:METHOD)% %PROTOCOL%" %RESPONSE_CODE% %RESPONSE_FLAGS% %BYTES_RECEIVED% %BYTES_SENT% %DURATION% %RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)% "%REQ(X-FORWARDED-FOR)%" "%REQ(USER-AGENT)%" "%REQ(X-REQUEST-ID)%" "%REQ(:AUTHORITY)%" "%UPSTREAM_HOST%"\n
        path: /dev/stdout
    http:
    - address: 0.0.0.0
      hostnames:
      - '*'
      isHTTP2: true
      metadata:
        kind: Gateway
        name: gateway-1
        namespace: envoy-gateway
        sectionName: http
      name: envoy-gateway/gateway-1/http
      path:
        escapedSlashesAction: UnescapeAndRedirect
        mergeSlashes: true
      port: 10080
      routes:
      - destination:
          name: httproute/default/httproute-1/rule/0
          settings:
          - addressType: FQDN
            endpoints:
            - host: grpc-infra-backend.gateway-conformance-infra.svc.cluster.local
              port: 8080
            name: httproute/default/httproute-1/rule/0/backend/0
            protocol: HTTP
            weight: 1
        envoyExtensions:
          extProcs:
          - authority: backend-fqdn2.default:9090
            destination:
              name: envoyextensionpolicy/default/policy-for-httproute/extproc/0
              settings:
              - addressType: FQDN
                endpoints:
                - host: backend-v2.gateway-conformance-infra.svc.cluster.local
                  port: 9090
                name: envoyextensionpolicy/default/policy-for-httproute/extproc/0/backend/0
                protocol: GRPC
                weight: 1
            name: envoyextensionpolicy/default/policy-for-httproute/extproc/0
            traffic:
              dns:
                dnsRefreshRate: 5s
                lookupFamily: IPv4AndIPv6
        hostname: gateway.envoyproxy.io
        isHTTP2: false
        metadata:
          kind: HTTPRoute
          name: httproute-1
          namespace: default
        name: httproute/default/httproute-1/rule/0/match/0/gateway_envoyproxy_io
        pathMatch:
          distinct: false
          name: ""
          prefix: /
        security:
          extAuth:
            bodyToExtAuth:
              maxRequestBytes: 8192
            failOpen: false
            http:
              authority: backend-v3.gateway-conformance-infra.svc.cluster.local:8080
              destination:
                name: securitypolicy/envoy-gateway/policy-for-gateway-1/extauth/0
                settings:
                - addressType: FQDN
                  endpoints:
                  - host: backend-v3.gateway-conformance-infra.svc.cluster.local
                    port: 8080
                  name: securitypolicy/envoy-gateway/policy-for-gateway-1/extauth/0/backend/0
                  protocol: HTTP
                  weight: 1
              path: ""
            name: securitypolicy/envoy-gateway/policy-for-gateway-1
            traffic:
              dns:
                dnsRefreshRate: 30s
                lookupFamily: IPv4Preferred
        traffic:
          dns:
            dnsRefreshRate: 5s
            lookupFamily: IPv6
            respectDnsTtl: false
          name: default/backend-traffic-policy
      - destination:
          name: grpcroute/default/grpcroute-1/rule/0
          settings:
          - addressType: FQDN
            endpoints:
            - host: grpc-infra-backend.gateway-conformance-infra.svc.cluster.local
              port: 8080
            name: grpcroute/default/grpcroute-1/rule/0/backend/0
            protocol: GRPC
            weight: 1
        hostname: '*'
        isHTTP2: true
        metadata:
          kind: GRPCRoute
          name: grpcroute-1
          namespace: default
        name: grpcroute/default/grpcroute-1/rule/0/match/-1/*
        security:
          extAuth:
            bodyToExtAuth:
              maxRequestBytes: 8192
            failOpen: false
            http:
              authority: backend-v3.gateway-conformance-infra.svc.cluster.local:8080
              destination:
                name: securitypolicy/envoy-gateway/policy-for-gateway-1/extauth/0
                settings:
                - addressType: FQDN
                  endpoints:
                  - host: backend-v3.gateway-conformance-infra.svc.cluster.local
                    port: 8080
                  name: securitypolicy/envoy-gateway/policy-for-gateway-1/extauth/0/backend/0
                  protocol: HTTP
                  weight: 1
              path: ""
            name: securitypolicy/envoy-gateway/policy-for-gateway-1
            traffic:
              dns:
                dnsRefreshRate: 30s
                lookupFamily: IPv4Preferred
        traffic:
          dns:
            dnsRefreshRate: 5s
            lookupFamily: IPv6
            respectDnsTtl: false
          name: default/backend-traffic-policy
    proxyCluster:
      destination:
        addressType: IP
        endpoints:
        - host: 8.7.6.5
          port: 10080
        name: proxy-cluster-0
        protocol: HTTP
      name: envoy-gateway-gateway-1-196ae069
    readyListener:
      address: 0.0.0.0
      ipFamily: IPv4
      path: /ready
      port: 19003
